--- a/ServiceBusProject/RelayMessaging/SOAP/EchoServiceClient/App.config
+++ b/ServiceBusProject/RelayMessaging/SOAP/EchoServiceClient/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     </startup>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel" switchValue="All">
+        <listeners>
+          <add name="traceListener" type="System.Diagnostics.XmlWriterTraceListener" initializeData="WCFTraces.svclog"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
 </configuration>
